--- a/projects/ngx-bit/.eslintrc.json
+++ b/projects/ngx-bit/.eslintrc.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../.eslintrc.json",
+  "parserOptions": {
+    "ecmaVersion": 2021
+  },
   "ignorePatterns": [
     "!**/*"
   ],
@@ -23,7 +26,9 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "bit",
+            "prefix": [
+              "bit"
+            ],
             "style": "camelCase"
           }
         ],
@@ -35,6 +40,74 @@
             "style": "kebab-case"
           }
         ],
+        "@angular-eslint/directive-class-suffix": [
+          "error",
+          {
+            "suffixes": [
+              "Directive",
+              "Component",
+              "Base"
+            ]
+          }
+        ],
+        "@angular-eslint/no-attribute-decorator": "error",
+        "@angular-eslint/no-conflicting-lifecycle": "off",
+        "@angular-eslint/no-forward-ref": "off",
+        "@angular-eslint/no-host-metadata-property": "off",
+        "@angular-eslint/no-lifecycle-call": "off",
+        "@angular-eslint/no-pipe-impure": "error",
+        "@angular-eslint/prefer-output-readonly": "error",
+        "@angular-eslint/use-component-selector": "off",
+        "@angular-eslint/use-component-view-encapsulation": "off",
+        "@typescript-eslint/array-type": [
+          "error",
+          {
+            "default": "array-simple"
+          }
+        ],
+        "@typescript-eslint/ban-types": [
+          "error",
+          {
+            "types": {
+              "Object": {
+                "message": "Use {} instead."
+              },
+              "String": {
+                "message": "Use string instead."
+              },
+              "Number": {
+                "message": "Use number instead."
+              },
+              "Boolean": {
+                "message": "Use boolean instead."
+              },
+              "Function": {
+                "message": "Use specific callable interface instead."
+              }
+            }
+          }
+        ],
+        "@typescript-eslint/consistent-type-definitions": "error",
+        "@typescript-eslint/explicit-member-accessibility": [
+          "off",
+          {
+            "accessibility": "explicit"
+          }
+        ],
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-for-in-array": "error",
+        "@typescript-eslint/no-inferrable-types": [
+          "error",
+          {
+            "ignoreParameters": true,
+            "ignoreProperties": true
+          }
+        ],
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "@typescript-eslint/no-this-alias": "error",
+        "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/no-unused-expressions": "off",
         "import/no-duplicates": "error",
         "import/no-unused-modules": "error",
         "import/no-unassigned-import": "error",
@@ -65,7 +138,19 @@
             ],
             "pathGroupsExcludedImportTypes": []
           }
-        ]
+        ],
+        "no-bitwise": "off",
+        "no-duplicate-imports": "error",
+        "no-invalid-this": "off",
+        "no-irregular-whitespace": "error",
+        "no-magic-numbers": "off",
+        "no-multiple-empty-lines": "error",
+        "no-redeclare": "off",
+        "no-underscore-dangle": "off",
+        "no-sparse-arrays": "error",
+        "no-template-curly-in-string": "off",
+        "prefer-object-spread": "error",
+        "prefer-template": "error"
       }
     },
     {
