--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
     "@ngx-pwa/local-storage": "^12.0.0",
+    "merge": "^2.1.1",
     "ng-particles": "^2.14.1",
     "ng-zorro-antd": "^12.0.1",
     "ngx-tinymce": "^12.0.0",
