--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,7 @@
             "scripts": [],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json",
-            "allowedCommonJsDependencies": ["tsparticles"]
+            "allowedCommonJsDependencies": ["tsparticles", "size-sensor", "pdfast"]
           },
           "configurations": {
             "production": {
