--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
       "ngx-bit/operates": ["projects/ngx-bit/operates/public-api.ts"],
       "ngx-bit/pipe": ["projects/ngx-bit/pipe/public-api.ts"],
       "ngx-bit/i18n": ["projects/ngx-bit/i18n/public-api.ts"],
-      "ngx-bit/page-header": ["projects/ngx-bit/page-header/public-api.ts"],
+      "ngx-bit/router": ["projects/ngx-bit/router/public-api.ts"],
       "ngx-bit/swal": ["projects/ngx-bit/swal/public-api.ts"],
       "@mock/*": ["resource/mock/*"]
     },
