--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,13 +22,10 @@
       "@common/*": ["src/app/common/*"],
       "@share": ["src/app/app-share.module.ts"],
       "ngx-bit": ["projects/ngx-bit/public-api.ts"],
-      "ngx-bit/component": ["projects/ngx-bit/component/public-api.ts"],
-      "ngx-bit/directive": ["projects/ngx-bit/directive/public-api.ts"],
-      "ngx-bit/operates": ["projects/ngx-bit/operates/public-api.ts"],
+      "ngx-bit/tool": ["projects/ngx-bit/tool/public-api.ts"],
       "ngx-bit/pipe": ["projects/ngx-bit/pipe/public-api.ts"],
-      "ngx-bit/i18n": ["projects/ngx-bit/i18n/public-api.ts"],
       "ngx-bit/router": ["projects/ngx-bit/router/public-api.ts"],
-      "ngx-bit/swal": ["projects/ngx-bit/swal/public-api.ts"],
+      "ngx-bit/i18n": ["projects/ngx-bit/i18n/public-api.ts"],
       "@mock/*": ["resource/mock/*"]
     },
     "plugins": [
