--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
     "build": "ng build --configuration production",
     "build:ngx-bit": "ng build ngx-bit --configuration production",
     "release:ngx-bit": "cd dist/ngx-bit && npm publish",
-    "build:schematics": "tsc -p projects/ngx-bit/tsconfig.schematics.json",
-    "copy:schemas": "cpy --parents projects/ngx-bit/schematics/*/schema.json dist/ngx-bit/",
-    "copy:collection": "cpy projects/ngx-bit/schematics/collection.json dist/ngx-bit/schematics",
-    "postbuild": "npm run copy:schemas && npm run copy:collection",
     "test": "ng test ngx-bit --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -29,6 +25,7 @@
     "@angular/service-worker": "~12.1.1",
     "@antv/g2plot": "^2.3.27",
     "@ngx-pwa/local-storage": "^12.0.0",
+    "hash-wasm": "^4.9.0",
     "merge": "^2.1.1",
     "ng-zorro-antd": "^12.0.1",
     "ngx-tinymce": "^12.0.0",
