--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.1.1",
+    "@angular/cdk": "^12.2.3",
     "@angular/common": "~12.1.1",
     "@angular/compiler": "~12.1.1",
     "@angular/core": "~12.1.1",
@@ -28,6 +29,7 @@
     "hash-wasm": "^4.9.0",
     "merge": "^2.1.1",
     "ng-zorro-antd": "^12.0.1",
+    "ngx-scrollbar": "^8.0.0",
     "ngx-tinymce": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
