--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~12.1.1",
     "@angular/router": "~12.1.1",
     "@angular/service-worker": "~12.1.1",
+    "@ngx-pwa/local-storage": "^12.1.0",
     "merge": "^2.1.1",
     "ng-zorro-antd": "^12.0.1",
     "ngx-scrollbar": "^8.0.0",
