--- a/projects/ngx/package.json
+++ b/projects/ngx/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@weplanx/framework",
+  "name": "@weplanx/ngx",
   "version": "12.0.0",
   "peerDependencies": {
     "@angular/common": "^12.0.0",
