--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,12 +19,13 @@
     "lib": ["es2018", "dom"],
     "paths": {
       "@env": ["src/environments/environment.ts"],
-      "@common/*": ["src/app/common/*"],
+      "@common/*": ["src/common/*"],
       "@share": ["src/app/app-share.module.ts"],
       "@weplanx/ngx": ["projects/ngx/public-api.ts"],
       "@weplanx/ngx/layout": ["projects/ngx/layout/public-api.ts"],
       "@weplanx/ngx/pipes": ["projects/ngx/pipes/public-api.ts"],
-      "@weplanx/ngx/helper": ["projects/ngx/helper/public-api.ts"]
+      "@weplanx/ngx/helper": ["projects/ngx/helper/public-api.ts"],
+      "@weplanx/ngx/components": ["projects/ngx/components/public-api.ts"]
     },
     "plugins": [
       {
