--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@weplanx/ngx/layout": ["projects/ngx/layout/public-api.ts"],
       "@weplanx/ngx/pipes": ["projects/ngx/pipes/public-api.ts"],
       "@weplanx/ngx/helper": ["projects/ngx/helper/public-api.ts"],
-      "@weplanx/ngx/components": ["projects/ngx/components/public-api.ts"]
+      "@weplanx/ngx/lowcode": ["projects/ngx/lowcode/public-api.ts"]
     },
     "plugins": [
       {
