--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@common/*": ["src/common/*"],
       "@share": ["src/app/app-share.module.ts"],
       "@weplanx/components": ["projects/components/public-api.ts"],
-      "@weplanx/components/table": ["projects/components/table/public-api.ts"]
+      "@weplanx/components/table": ["projects/components/table/public-api.ts"],
+      "@weplanx/components/settings": ["projects/components/settings/public-api.ts"]
     },
     "plugins": [
       {
