--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "@share": ["src/app/app-share.module.ts"],
       "@weplanx/components": ["projects/components/public-api.ts"],
       "@weplanx/components/table": ["projects/components/table/public-api.ts"],
-      "@weplanx/components/settings": ["projects/components/settings/public-api.ts"]
+      "@weplanx/components/settings": ["projects/components/settings/public-api.ts"],
+      "@weplanx/components/template": ["projects/components/template/public-api.ts"]
     },
     "plugins": [
       {
