--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "console",
+  "name": "angular-components",
   "version": "0.0.0-NOT-USED",
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
@@ -40,7 +40,7 @@
     "@angular/cli": "~12.1.1",
     "@angular/compiler-cli": "~12.1.1",
     "@angular/language-service": "^12.1.1",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "~3.7.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "4.23.0",
@@ -49,7 +49,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.4.0",
-    "jasmine-core": "~3.7.0",
+    "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
