--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "angular-components",
+  "description": "",
   "version": "0.0.0-NOT-USED",
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
