--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "importHelpers": true,
     "target": "es2017",
     "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "lib": ["es2018", "dom", "es2019"],
     "paths": {
       "@env": ["src/environments/environment.ts"],
       "@common/*": ["src/common/*"],
