--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@angular/animations": "~13.1.1",
-    "@angular/cdk": "^12.2.3",
+    "@angular/cdk": "^13.1.1",
     "@angular/common": "~13.1.1",
     "@angular/compiler": "~13.1.1",
     "@angular/core": "~13.1.1",
@@ -33,22 +33,22 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
-    "@angular-eslint/builder": "12.2.2",
-    "@angular-eslint/eslint-plugin": "12.2.2",
-    "@angular-eslint/eslint-plugin-template": "12.2.2",
-    "@angular-eslint/schematics": "12.2.2",
-    "@angular-eslint/template-parser": "12.2.2",
+    "@angular-eslint/builder": "13.0.1",
+    "@angular-eslint/eslint-plugin": "13.0.1",
+    "@angular-eslint/eslint-plugin-template": "13.0.1",
+    "@angular-eslint/schematics": "13.0.1",
+    "@angular-eslint/template-parser": "13.0.1",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.1",
     "@angular/language-service": "^13.1.1",
     "@types/jasmine": "~3.7.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
-    "eslint": "^7.26.0",
+    "@typescript-eslint/eslint-plugin": "5.3.0",
+    "@typescript-eslint/parser": "5.3.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-prettier": "^3.4.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
