--- a/package.json
+++ b/package.json
@@ -22,25 +22,23 @@
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
     "@angular/service-worker": "~13.1.1",
-    "@ngx-pwa/local-storage": "^12.1.0",
+    "@ngx-pwa/local-storage": "^13.0.2",
     "merge": "^2.1.1",
     "monaco-editor": "^0.29.1",
-    "ng-zorro-antd": "^12.1.0",
+    "ng-zorro-antd": "^13.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
-    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
-    "@angular-eslint/builder": "13.0.1",
-    "@angular-eslint/eslint-plugin": "13.0.1",
-    "@angular-eslint/eslint-plugin-template": "13.0.1",
-    "@angular-eslint/schematics": "13.0.1",
-    "@angular-eslint/template-parser": "13.0.1",
+    "@angular-eslint/builder": "~13.0.1",
+    "@angular-eslint/eslint-plugin": "~13.0.1",
+    "@angular-eslint/eslint-plugin-template": "~13.0.1",
+    "@angular-eslint/schematics": "~13.0.1",
+    "@angular-eslint/template-parser": "~13.0.1",
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.1",
-    "@angular/language-service": "^13.1.1",
     "@types/jasmine": "~3.7.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
@@ -53,9 +51,9 @@
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "ng-packagr": "^13.1.2",
     "prettier": "^2.3.2",
     "typescript": "~4.5.4"
