--- a/projects/components/package.json
+++ b/projects/components/package.json
@@ -1,19 +1,17 @@
 {
   "name": "@weplanx/components",
-  "version": "12.0.0",
+  "version": "13.0.0",
   "peerDependencies": {
-    "@angular/common": "^12.0.0",
-    "@angular/core": "^12.0.0",
-    "ng-zorro-antd": "^12.0.0"
+    "@angular/common": "^13.0.0",
+    "@angular/core": "^13.0.0",
+    "ng-zorro-antd": "^13.0.0"
   },
   "dependencies": {
-    "tslib": "^2.2.0",
-    "merge": "^2.1.1"
+    "tslib": "^2.2.0"
   },
   "keywords": [
     "angular",
-    "ng-zorro",
-    "ngx"
+    "ng-zorro"
   ],
   "author": {
     "name": "kain",
