--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
     "build:console": "ng build --configuration production",
-    "build:core": "ng build core --configuration production",
+    "build:common": "ng build common --configuration production",
     "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
