--- a/projects/components/tsconfig.lib.prod.json
+++ b/projects/components/tsconfig.lib.prod.json
@@ -2,7 +2,10 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false
+    "declarationMap": false,
+    "paths": {
+      "@weplanx/common": ["dist/common", "dist/common/*"]
+    }
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
