--- a/projects/common/tsconfig.lib.json
+++ b/projects/common/tsconfig.lib.json
@@ -7,8 +7,5 @@
     "inlineSources": true,
     "types": []
   },
-  "exclude": [
-    "src/test.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["src/test.ts", "**/*.spec.ts"]
 }
