--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,10 +28,7 @@
       "@weplanx/components": ["projects/components/public-api.ts"],
       "@weplanx/components/table": ["projects/components/table/public-api.ts"],
       "@weplanx/components/template": ["projects/components/template/public-api.ts"],
-      "@weplanx/settings": ["projects/settings/public-api.ts"],
-      "@weplanx/settings/pages": ["projects/settings/pages/public-api.ts"],
-      "@weplanx/settings/roles": ["projects/settings/roles/public-api.ts"],
-      "@weplanx/settings/users": ["projects/settings/users/public-api.ts"]
+      "@weplanx/settings": ["projects/settings/public-api.ts"]
     }
   },
   "angularCompilerOptions": {
