--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "description": "",
   "version": "0.0.0-NOT-USED",
   "scripts": {
-    "start": "ng serve --host 0.0.0.0 --disable-host-check",
-    "build:console": "ng build --configuration production",
-    "build:common": "ng build common --configuration production",
-    "build:components": "ng build components --configuration production",
-    "build:settings": "ng build settings --configuration production",
+    "start": "ng s --host 0.0.0.0 --disable-host-check",
+    "dev:common": "ng b common --watch",
+    "dev:components": "ng b components --watch",
+    "dev:settings": "ng b settings --watch",
+    "build:common": "ng b common --configuration production",
+    "build:components": "ng b components --configuration production",
+    "build:settings": "ng b settings --configuration production",
+    "build:console": "ng b --configuration production",
     "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
