--- a/projects/components/tsconfig.lib.prod.json
+++ b/projects/components/tsconfig.lib.prod.json
@@ -2,10 +2,7 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
-    "declarationMap": false,
-    "paths": {
-      "@weplanx/common": ["dist/common", "dist/common/*"]
-    }
+    "declarationMap": false
   },
   "angularCompilerOptions": {
     "compilationMode": "partial"
