--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,12 @@
       "@env": ["src/environments/environment.ts"],
       "@common/*": ["src/common/*"],
       "@center/*": ["src/center/*"],
-      "@weplanx/common": ["projects/common/public-api.ts"],
-      "@weplanx/common/layout": ["projects/common/layout/public-api.ts"],
-      "@weplanx/components": ["projects/components/public-api.ts"],
-      "@weplanx/components/table": ["projects/components/table/public-api.ts"],
-      "@weplanx/components/template": ["projects/components/template/public-api.ts"],
-      "@weplanx/settings": ["projects/settings/public-api.ts"]
+      "@weplanx/common": ["dist/common", "dist/common/*"],
+      "@weplanx/common/layout": ["dist/common/layout", "dist/common/layout/*"],
+      "@weplanx/components": ["dist/components", "dist/components/*"],
+      "@weplanx/components/table": ["dist/components/table", "dist/components/table/*"],
+      "@weplanx/components/template": ["dist/components/template", "dist/components/template/*"],
+      "@weplanx/settings": ["dist/settings", "dist/settings/*"]
     }
   },
   "angularCompilerOptions": {
