--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "dev:common": "ng b common --watch",
     "dev:components": "ng b components --watch",
     "dev:settings": "ng b settings --watch",
+    "dev:center": "ng b center --watch",
+    "dev:resources": "ng b resources --watch",
     "build:common": "ng b common --configuration production",
     "build:components": "ng b components --configuration production",
     "build:settings": "ng b settings --configuration production",
+    "build:center": "ng b center --configuration production",
+    "build:resources": "ng b resources --configuration production",
     "build:console": "ng b --configuration production",
     "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
