--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
       "@common/*": ["src/app/common/*"],
       "@weplanx/common": ["projects/common/src/public-api.ts"],
       "@weplanx/components": ["projects/components/public-api.ts"],
+      "@weplanx/components/transport": ["projects/components/transport/public-api.ts"],
+      "@weplanx/components/media": ["projects/components/media/public-api.ts"],
       "@weplanx/components/table": ["projects/components/table/public-api.ts"],
       "@weplanx/settings": ["projects/settings/src/public-api.ts"],
       "@weplanx/center": ["projects/center/src/public-api.ts"],
