--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-components": {
+    "weplanx": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angular-components",
+            "outputPath": "dist/weplanx/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -79,10 +79,10 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-components:build:production"
+              "browserTarget": "weplanx:build:production"
             },
             "development": {
-              "browserTarget": "angular-components:build:development"
+              "browserTarget": "weplanx:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -90,7 +90,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-components:build"
+            "browserTarget": "weplanx:build"
           }
         },
         "lint": {
@@ -98,6 +98,65 @@
           "options": {
             "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/weplanx/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "weplanx:build:development",
+              "serverTarget": "weplanx:server:development"
+            },
+            "production": {
+              "browserTarget": "weplanx:build:production",
+              "serverTarget": "weplanx:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "weplanx:build:production",
+              "serverTarget": "weplanx:server:production"
+            },
+            "development": {
+              "browserTarget": "weplanx:build:development",
+              "serverTarget": "weplanx:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     },
@@ -287,5 +346,5 @@
       }
     }
   },
-  "defaultProject": "angular-components"
+  "defaultProject": "weplanx"
 }
