--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-components",
+  "name": "weplanx",
   "description": "",
   "version": "0.0.0-NOT-USED",
   "scripts": {
@@ -15,6 +15,10 @@
     "build:center": "ng b center --configuration production",
     "build:resources": "ng b resources --configuration production",
     "build": "ng b --configuration production",
+    "dev:ssr": "ng run weplanx:serve-ssr",
+    "build:ssr": "ng run weplanx:server",
+    "serve:ssr": "node dist/weplanx/server/main.js",
+    "prerender": "ng run weplanx:prerender",
     "test": "ng test --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -28,9 +32,12 @@
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/platform-server": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@angular/service-worker": "~13.2.0",
+    "@nguniversal/express-engine": "^13.0.2",
     "@ngx-pwa/local-storage": "^13.0.2",
+    "express": "^4.15.2",
     "monaco-editor": "^0.31.1",
     "ng-zorro-antd": "^13.0.1",
     "rxjs": "~7.4.0",
@@ -46,6 +53,8 @@
     "@angular-eslint/template-parser": "~13.0.1",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
+    "@nguniversal/builders": "^13.0.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/uuid": "^8.3.1",
